# pubchem_mcp_server

./: README.md  pyproject.toml
src/pubchem_mcp_server/: __init__.py  main.py
